<resources>
    <string name="app_name">SendMeal</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="password1">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>
    <string name="mailUsuario">Email</string>
    <string name="tipoTarjeta">Tipo de tarjeta:</string>
    <string name="numeroTarjeta">Numero de tarjeta</string>
    <string name="codigoCCV">CCV</string>
    <string name="fechaVencimiento">Fecha vencimiento</string>
    <string name="mesVencimiento">Mes</string>
    <string name="añoVencimiento">Año</string>
    <string name="numeroCBU">CBU</string>
    <string name="aliasCBU">Alias CBU</string>
    <string name="cargaInicial">Realizar carga inicial?</string>
    <string name="checkbox1">Acepto los terminos y condiciones</string>
    <string name="botonRegistro">Registrar</string>
</resources>